--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,47 @@
 <html>
 <head>
   <title>Uebung5</title>
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+<!-- Optional theme -->
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css">
+
+
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<div class="container">
+
+
+<div class="header">
+    <ul class="nav nav-pills pull-right">
+    <li class="active">
+        <%= link_to "Home", :controller => "home", :action => "index" %>
+    </li>
+    <li>
+        <%= link_to "About", :controller => "home", :action => "about" %>
+    </li>
+    </ul>
+    <h3 class="text-muted">Beispiel-App</h3>
+</div>
+
+
+
+
+	
+    <%= yield %>
+<div class="footer">
+    <p>&copy; Natalija 2013</p>
+</div>
+
+</div> <!-- /container -->
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 
 </body>
 </html>
